15-Jul-2015 Geraldine Conti
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : apply lepSF to total weight
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : changed HLT_mu40 to HLT_mu50
	* ZeroLeptonCRY.cxx : added lines for photon SF (still commented out - needs fixing)
	* ZeroLeptonCRZ.cxx : ask for two isolated signal leptons in CRZ 
	
08-Jul-2015 Laurent Duflot
	* PileUpRWProcessor, config file, data/: update pileup reweighting
	to apply PRW to 50ns mc15

14-Jul-2015 Geraldine Conti
	* PhysObjProxyFiller.cxx: added b-jet requirements (pT>40, |eta|<2.5)
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : add leptonID in lep1sign/lep2sign variables
	* Added lepton SF as decoration to the muon/electron

14-Jul-2015 Marija Vranjes Milosavljevic
	* adding p2372 MC list used for EPS results
	* added alternative lWjetsAlt and lZjetsAlt to the mc15_13TeV_MCSampleList.py
	* reduced cuts in cutfile8TeV.dat for latest production (to be changed back after the EPS rush)
	M       python/mc15_13TeV_MCSampleList.py
	M       data/cutfile8TeV.dat
	M       data/mc15_13TeV_forEPS_p2372.ds

10-Jul-2015 Geraldine Conti
	* update to SUSYTools-00-06-15
	* BuildSUSYObjects.cxx : isTrigPassed -> IsTrigPassed
	* ZeroLeptonSystVariations.cxx : commented out #include "PATInterfaces/SystematicList.h"
	* Trigger : updated for CRWT and CRZ (following Yu's recommendations)

09-Jul-2015 Geraldine Conti
	* commented out trigger for truth code
	* added lines needed to run on truth signal in truth config file
	* fixed trigger of photons


09-Jul-2015 Marija Vranjes Milosavljevic
	* ZeroLeptonSR.cxx, ZeroLeptonCRWT.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx, BuildSUSYObjects.cxx: adding trigger
	selections for EPS note
	* adding ZeroLeptonRun2/data/mc15_13TeV_forEPS.ds with MC datasets list for EPS


08-Jul-2015 Laurent Duflot
	* README: fix typo in 'cleaning' bits for SR and add first
	recommandations for cleaning cuts


08-Jul-2015 Geraldine Conti
	* FilterUpdateMerge.py : add option for LO Z+Jets